# gtas_vpp_be/gtas_vpp_be.Service/Services/RequestLanguageProvider.cs
@@ -1,0 +1,15 @@
+using System.Globalization;
+using gtas_vpp_shared.Constants;
+
+namespace gtas_vpp_be.Service.Services;
+
+public interface IRequestLanguageProvider
+{
+    string LanguageCode { get; }
+}
+
+public sealed class RequestLanguageProvider : IRequestLanguageProvider
+{
+    public string LanguageCode => BusinessLanguages.Normalize(
+        CultureInfo.CurrentUICulture.TwoLetterISOLanguageName);
+}
